test/fails/bad_casts/basics2.lgl
tag coord a is vec<2>;
tag b is vec<2>;

void main() {
    a->b a_b = [[1., 2.], [2., 1.]];
    a avec = [1., 2.];
    b fail = avec in b; //b is not a coordinate system, so no path
}